--- a/.gitignore
+++ b/.gitignore
@@ -68,9 +68,8 @@ crashlytics-build.properties
 # Packed Addressables
 /[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
 
-#General
-.DS_Store
-.AppleDouble
-.LSOverride
 .log
 .exe.log
+# Temporary auto-generated Android Assets
+/[Aa]ssets/[Ss]treamingAssets/aa.meta
+/[Aa]ssets/[Ss]treamingAssets/aa/*
